Fixed high priority FindBugs warnings.